# rust_mars

./: Cargo.toml  bruh  default.nix  link.map  mips.json  mips1.asm  run.sh
build_tools/: Cargo.toml
build_tools/.cargo/: config.toml
build_tools/src/: asm_pre_processor.rs  main.rs
ll_alloc/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
mips/: Cargo.toml  mips.json
mips/.cargo/: config.toml
mips/ll_alloc/: Cargo.toml
mips/ll_alloc/src/: lib.rs
mips/main/: Cargo.toml
mips/main/src/: main.rs
mips/rlib/: Cargo.toml
mips/rlib/src/: lib.rs  macros.rs  rt.rs
mips/rlib/src/arch/: syscalls.rs
mips/rlib/src/io/: file.rs  midi.rs  mod.rs
mips/rlib/src/prelude/: mod.rs
rlib/: Cargo.toml
rlib/src/: lib.rs  macros.rs  rt.rs
rlib/src/arch/: call_ids.rs  mod.rs  syscalls.rs
rlib/src/io/: file.rs  midi.rs  mod.rs
rlib/src/prelude/: mod.rs
rlib/src/sync/: mod.rs
