[package]
name = "build_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-tools = { version = "0.1.1" }
# file-matcher = "0.7.0"
walkdir = "2"

# [build-dependencies]
# llvm-tools-build = { version = "0.1", optional = true, package = "llvm-tools" }